Added constants to the RacersData class