@@ -3,7 +3,6 @@ package git.foxminded.dzaimenko;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class RacingResultPrinter {
 
@@ -13,7 +12,7 @@ public class RacingResultPrinter {
     public List<Racer> sortRacersByLapTime(Map<String, Racer> racers) {
         return racers.values().stream()
                 .sorted(Comparator.comparing(Racer::getLapTime))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String formatLapTime(long lapTime) {
